--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GIT Demo</title>
+    <link rel="stylesheet" href="styles/style.css" type="text/css">
 </head>
 
 <body>
+    <p class="title-line">This is a GIT demo app.</p>
     <img alt="logo" src="images/logo.png" />
 </body>
 
