Add content in html & add styles & update readme.md

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <p class="title-line">This is a GIT demo app.</p>
     <img alt="logo" src="images/logo.png" />
+    <p class="content-line">This is content</p>
 </body>
 
 </html>
