演示分离头指针

--- a/git.html
+++ b/git.html
@@ -13,6 +13,7 @@
     <p class="title-line">This is a GIT demo app.</p>
     <img alt="logo" src="images/logo.png" />
     <p class="content-line">This is content</p>
+    <p>something modified.</p>
 </body>
 
 </html>
