修改了git.html, 准备演示多人同时修改一个文件

--- a/git.html
+++ b/git.html
@@ -10,9 +10,11 @@
 </head>
 
 <body>
+    <p>This is header</p>
     <p class="title-line">This is a GIT demo app.</p>
     <img alt="logo" src="images/logo.png" />
     <p class="content-line">This is content</p>
+    <p>This is foot</p>
 </body>
 
 </html>
