--- a/git.html
+++ b/git.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <p>This is header</p>
+    <p>This is header, modified</p>
     <p class="title-line">This is a GIT demo app.</p>
     <img alt="logo" src="images/logo.png" />
     <p class="content-line">This is content</p>
