--- a/git.html
+++ b/git.html
@@ -14,7 +14,7 @@
     <p class="title-line">This is a GIT demo app.</p>
     <img alt="logo" src="images/logo.png" />
     <p class="content-line">This is content</p>
-    <p>This is foot</p>
+    <p>This is foot, modified</p>
 </body>
 
 </html>
